Fixed position instead of absolute for nav menu stops overflow scrolling

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -50,7 +50,7 @@ li {
         height: 100%;
         top: 5.5rem;
         transform: translateX(100%);
-        position: absolute;
+        position: fixed;
         background-color: var(--secondary);
         padding: 1rem 1.5rem;
         
